--- a/src/app/navbar2/navbar2.component.html
+++ b/src/app/navbar2/navbar2.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark"style="background-color: #fffc00;">
     <a class="navbar-brand" href="">
-      <img src="assets/Snap Inc.svg" Salt="">
+      <img src="assets/Snap Inc.svg" alt="">
     </a>
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
